# beeldverwerking-project

./: .gitignore  CMakeLists.txt  README.md  s534ohjp.bx5.txt
model/: asphalt.model  asphalt.model.old  blauwe_poort.model  gras.model  gras2.model  grote_witte_tegels.model  hek_station.model  redWall.model  shrubs.model  shrubsSintDenijs.model  smalle_tegels.model  stationTile.model  tegel_Denijs.model  tegels1_sporthal.model  tegels2_sporthal.model  tegelsGroot_sporthal.model  tegelx_Denijs.model
resources/img/: PLACE_IMAGES_HERE
src/: blindtastic_concurrency.cpp  blindtastic_concurrency.h  blindtastic_core.cpp  blindtastic_core.h  blindtastic_models.cpp  blindtastic_models.h  features.cpp  features.h  file_utils.h  image_utils.cpp  image_utils.h  io_utils.h  main.cpp  svm_features.cpp  svm_features.h  svm_perf_lnk.h  svm_shit.h  svm_utils.cpp  svm_utils.h  video_utils.cpp  video_utils.h
src/svm_perf/svm_light/: svm_common.c  svm_learn_main.c
src/svm_perf/svm_struct/: svm_struct_classify.c  svm_struct_main.c
